--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "wsse",
-  "description": "WSSE Username Token generator for Node.js",
+  "name": "wsse-in-browser",
+  "description": "WSSE Username Token generator for Node.js with browserify",
   "version": "2.4.0",
   "author": {
-    "name": "bouzuya",
-    "email": "m@bouzuya.net",
-    "url": "http://bouzuya.net"
+    "name": "Gene Jones",
+    "email": "iam@genejon.es",
+    "url": "genejon.es"
   },
   "bugs": {
-    "url": "https://github.com/bouzuya/node-wsse/issues"
+    "url": "https://github.com/genejones/node-wsse/issues"
   },
   "devDependencies": {
     "coffee-script": "^1.9.3",
@@ -25,7 +25,7 @@
     "power-assert": "^0.11.0",
     "run-sequence": "^1.1.0"
   },
-  "homepage": "https://github.com/bouzuya/node-wsse",
+  "homepage": "https://github.com/genejones/node-wsse",
   "keywords": [
     "wsse"
   ],
@@ -33,12 +33,15 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/bouzuya/node-wsse.git"
+    "url": "git://github.com/genejones/node-wsse.git"
   },
   "scripts": {
     "build": "gulp build",
     "clean": "gulp clean",
     "test": "gulp test",
     "watch": "gulp watch"
+  },
+  "dependencies": {
+    "sha.js": "^2.4.10"
   }
 }
